--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
 
   <body>
     //= ./html/header.html
+    //= ./html/Section_3.html
+    //= ./html/Section_4.html
     <script src="js/scripts.min.js"></script>
   </body>
 </html>
