--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,1 +1,66 @@
-<header>ssss</header>
+<div class="header ">
+  <div class="header__nav">
+    <div class="header__logo">
+      Mobileapp
+    </div>
+    <div class=" header__navigation">
+		<div class="header__nav_select"><a href="#">Home</a></div>
+		<div class="header__nav_select"><a href="#">Feature</a></div>
+		<div class="header__nav_select"><a href="#">Team</a></div>
+		<div class="header__nav_select"><a href="#">Testimonials</a></div>
+		<div class="header__nav_select"><a href="#">Contact</a></div>
+      <svg class="hidden"
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink"
+        width="28px"
+        height="19px"
+      >
+        <image
+          x="0px"
+          y="0px"
+          width="28px"
+          height="19px"
+          xlink:href="data:img/png;base64,iVBORw0KGgoAAAANSUhEUgAAABwAAAATCAQAAAApUqXKAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAAmJLR0QA/4ePzL8AAAAHdElNRQfjBw0KGzsJ5GApAAAAIElEQVQ4y2Nk+M9AFmAiTxsFGkcBHsA4Go/DAgyheAQAcQwDDZoVf18AAAAASUVORK5CYII="
+        />
+      </svg>
+    </div>
+  </div>
+  <div class="container relative">
+    <h1 class="header__title">Introducing Mobileapp</h1>
+    <h2 class="header__aftertitle">
+      Maecenas vitae tellus
+      sapien. Praesent
+    </h2>
+    <div class="header__options">
+      <div class="header__option">
+        <div class="header__strelka">
+          <img src="../images/header/arrow.png" alt="" />
+        </div>
+        <div class="header__span">Semper scelerisque tristique a enim</div>
+      </div>
+      <div class="header__option">
+        <div class="header__strelka">
+          <img src="../images/header/arrow.png" alt="" />
+        </div>
+        <div class="header__span">
+          Integer ut mattis nulla, eget vehicula elit
+        </div>
+      </div>
+      <div class="header__option">
+        <div class="header__strelka">
+          <img src="../images/header/arrow.png" alt="" />
+        </div>
+        <div class="header__span">Praesent rutrum ac nunc et</div>
+      </div>
+    </div>
+    <div class="header__button_space">
+      <button class="header__button">
+		  <div class="header__button_inner">
+        <div class="header__button_ico"><img src="./images/header/cloud_download.png" alt=""></div>
+		<div class="header__button_line">Download</div>
+	</div>
+	  </button>
+	  <img class="header__iphones" src="../images/header/screen1.png" alt="">
+    </div>
+  </div>
+</div>
