--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 
   <body>
     //= ./html/header.html
+    //= ./html/section1.html
     <script src="js/scripts.min.js"></script>
   </body>
 </html>
