--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
   </head>
 
   <body>
-    //= ./html/header.html
+    
+    //= ./html/footer.html
     <script src="js/scripts.min.js"></script>
   </body>
 </html>
