--- a/src/html/header.html
+++ b/src/html/header.html
@@ -34,13 +34,13 @@
     <div class="header__options">
       <div class="header__option">
         <div class="header__strelka">
-          <img src="../images/header/arrow.png" alt="" />
+          <img src="./images/header/arrow.png" alt="" />
         </div>
         <div class="header__span">Semper scelerisque tristique a enim</div>
       </div>
       <div class="header__option">
         <div class="header__strelka">
-          <img src="../images/header/arrow.png" alt="" />
+          <img src="./images/header/arrow.png" alt="" />
         </div>
         <div class="header__span">
           Integer ut mattis nulla, eget vehicula elit
@@ -48,7 +48,7 @@
       </div>
       <div class="header__option">
         <div class="header__strelka">
-          <img src="../images/header/arrow.png" alt="" />
+          <img src="./images/header/arrow.png" alt="" />
         </div>
         <div class="header__span">Praesent rutrum ac nunc et</div>
       </div>
@@ -60,7 +60,7 @@
 		<div class="header__button_line">Download</div>
 	</div>
 	  </button>
-	  <img class="header__iphones" src="../images/header/screen1.png" alt="">
+	  <img class="header__iphones" src="./images/header/screen1.png" alt="">
     </div>
   </div>
 </div>
