--- a/src/html/section1.html
+++ b/src/html/section1.html
@@ -10,7 +10,7 @@
       <div class="key">
         <div class="key__column">
           <div class="key__features">
-            <div class="key__ico"><img src="../images/iconboard.png" alt="" /></div>
+            <div class="key__ico"><img src="./images/iconboard.png" alt="" /></div>
             <div class="key__text">
               <div class="key__h2">Amet varius</div>
               Donec posuere augue venenatis, aliquet ligula ut, tempus quam. Vivamus
@@ -18,7 +18,7 @@
             </div>
           </div>
           <div class="key__features">
-            <div class="key__ico"><img src="../images/icon-hub.svg" alt="" /></div>
+            <div class="key__ico"><img src="./images/icon-hub.svg" alt="" /></div>
             <div class="key__text">
               <div class="key__h2">Amet varius</div>
               Donec posuere augue venenatis, aliquet ligula ut, tempus quam. Vivamus
@@ -27,7 +27,7 @@
           </div>
           <div class="key__features">
             <div class="key__ico">
-              <img src="../images/icon-share.svg" alt="" />
+              <img src="./images/icon-share.svg" alt="" />
             </div>
             <div class="key__text">
               <div class="key__h2">Amet varius</div>
@@ -36,12 +36,12 @@
             </div>
           </div>
       </div>
-      <div class="key__iphone"> <img src="../images/section1/screen.png" alt="" /></div>
+      <div class="key__iphone"> <img src="./images/section1/screen.png" alt="" /></div>
         <div class="key__column">
 
 
           <div class="key__features">
-            <div class="key__ico"><img src="../images/icon-bell.svg" alt="" /></div>
+            <div class="key__ico"><img src="./images/icon-bell.svg" alt="" /></div>
             <div class="key__text">
               <div class="key__h2">Amet varius</div>
               Donec posuere augue venenatis, aliquet ligula ut, tempus quam. Vivamus
@@ -49,7 +49,7 @@
             </div>
           </div>
           <div class="key__features">
-            <div class="key__ico"><img src="../images/icon-star.svg" alt="" /></div>
+            <div class="key__ico"><img src="./images/icon-star.svg" alt="" /></div>
             <div class="key__text">
               <div class="key__h2">Amet varius</div>
               Donec posuere augue venenatis, aliquet ligula ut, tempus quam. Vivamus
@@ -58,7 +58,7 @@
           </div>
           <div class="key__features">
             <div class="key__ico">
-              <img src="../images/icon-thumb.svg" alt="" />
+              <img src="./images/icon-thumb.svg" alt="" />
             </div>
             <div class="key__text">
               <div class="key__h2">Amet varius</div>
