--- a/src/html/Section_3.html
+++ b/src/html/Section_3.html
@@ -36,7 +36,7 @@
         </ul>
       </div>
       <img
-        src="../images/section3/img.png"
+        src="./images/section3/img.png"
         alt="girl"
         width="270px"
         height="300px"
@@ -70,7 +70,7 @@
         </ul>
       </div>
       <img
-        src="../images/section3/Layer 19.png"
+        src="./images/section3/Layer 19.png"
         alt="girl"
         width="270px"
         height="300px"
@@ -104,7 +104,7 @@
         </ul>
       </div>
       <img
-        src="../images/section3/Layer 20.png"
+        src="./images/section3/Layer 20.png"
         alt="girl"
         width="270px"
         height="300px"
@@ -138,7 +138,7 @@
         </ul>
       </div>
       <img
-        src="../images/section3/Layer 21.png"
+        src="./images/section3/Layer 21.png"
         alt="girl"
         width="270px"
         height="300px"
